[package]
name = "mud_tui"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
ratatui = "0.23.0"               # TUI library
crossterm = "0.26"                # Terminal handling
tokio = { version = "1", features = ["full"] } # Asynchronous runtime
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0"                # JSON handling
libmudtelnet = "2.0.1"            # Telnet handling
lazy_static = "1.4.0"             # Static variable initialization
log = "0.4"                        # Logging
env_logger = "0.11"                # Logging implementation
simplelog = "0.12.2"
